Fix z-index issue

--- a/app/javascript/styles/_index.scss
+++ b/app/javascript/styles/_index.scss
@@ -488,6 +488,7 @@ html {
 .services-edit {
   h1 {
     clear: both;
+    z-index: 1;
 
     @include govuk-media-query($from: tablet) {
       clear: none;
@@ -511,11 +512,13 @@ html {
   // Fix z-index issues because calculations for Branch FlowConnectorPath elements start
   // their lines from centre of a Branch Node, which places them directly over those
   // elements, without this workaround in place (easier to fix z-index than calculations).
+  // Also includes some elements that gained position:fixed because they fell off the view.
   .FlowConnectorLine,
   .FlowConnectorPath,
   .govuk-header,
   .govuk-navigation-app,
-  .ui-widget-overlay {
+  .ui-widget-overlay,
+  .fb-preview-button {
     z-index: 1;
   }
 
